content/sensu-go/6.1/observability-pipeline/observe-process/handlers.md
---
title: "Handlers reference"
linkTitle: "Handlers Reference"
reference_title: "Handlers"
type: "reference"
description: "Handlers are actions the Sensu backend executes on events, allowing you to created automated monitoring workflows. Read the reference doc to learn about handlers."
weight: 10
version: "6.1"
product: "Sensu Go"
platformContent: false
menu:
  sensu-go-6.1:
    parent: observe-process
---

Sensu executes handlers during the **[process][22]** stage of the [observability pipeline][29].

Handlers are actions the Sensu backend executes on events.
Several types of handlers are available.
The most common are `pipe` handlers, which work similarly to [checks][1] and enable Sensu to interact with almost any computer program via [standard streams][2].

- **Pipe handlers** send observation data (events) into arbitrary commands via `STDIN`
- **TCP/UDP handlers** send observation data (events) to a remote socket
- **Handler sets** group event handlers and streamline groups of actions to execute for certain types of events (also called "set handlers")
- **Handler stacks** are a group of handlers or a handler set that escalate events through a series of different handlers

Discover, download, and share Sensu handler dynamic runtime assets using [Bonsai][16], the Sensu asset hub.
Read [Use assets to install plugins][23] to get started.

## Pipe handlers

Pipe handlers are external commands that can consume [event][3] data via STDIN.

#### Pipe handler command

Pipe handler definitions include a `command` attribute, which is a command for the Sensu backend to execute.

#### Pipe handler command arguments

Pipe handler `command` attributes may include command line arguments for controlling the behavior of the `command` executable.

## TCP/UDP handlers

TCP and UDP handlers enable Sensu to forward event data to arbitrary TCP or UDP sockets for external services to consume.

## Handler sets

Handler set definitions allow you to use a single named handler set to refer to groups of handlers.
The handler set becomes a collection of individual actions to take (via each included handler) on event data.

For example, suppose you have already created these two handlers:

- `elasticsearch` to send all observation data to Elasticsearch.
- `opsgenie` to send non-OK status alerts to your OpsGenie notification channel.

You can list both of these handlers in a handler set to automate and streamline your workflow, specifying `type: set`:

{{< language-toggle >}}

{{< code yml >}}
type: Handler
api_version: core/v2
metadata:
  name: send_events_notify_operator
  namespace: default
spec:
  handlers:
  - elasticsearch
  - opsgenie
  type: set
{{< /code >}}

{{< code json >}}
{
  "type": "Handler",
  "api_version": "core/v2",
  "metadata": {
    "name": "send_events_notify_operator",
    "namespace": "default"
  },
  "spec": {
    "type": "set",
    "handlers": [
      "elasticsearch",
      "opsgenie"
    ]
  }
}
{{< /code >}}

{{< /language-toggle >}}

Now you can route observation data to Elasticsearch and alerts to OpsGenie with a single handler definition, the `send_events_notify_operator` handler set.

{{% notice note %}}
**NOTE**: Attributes defined in handler sets do not apply to the handlers they include.
For example, `filters` and `mutator` attributes defined in a handler set will have no effect on handlers.
Define these attributes in individual handlers instead.
{{% /notice %}}

## Handler stacks

Handler stacks are a group of handlers or a handler set that escalate events through a series of different handlers.
For example, consider a handler stack with three levels of escalation:

- Level 1: On the first occurrence, attempt remediation with the `remediation` handler.
- Level 2: On the fifth occurrence, send an alert to Slack with the `slack_alert_channel` handler.
- Level 3: On the tenth occurrence, send an alert to PagerDuty with the `pagerduty_emergency` handler. Continue to send this alert on every tenth occurrence thereafter until the incident is resolved.

**SOMETHING LIKE** "...this will require three event filters and three handlers. one of the filters is already built in to Sensu, so you don't have to write it. You can also use fatigue check filter asset or the auto-remediation integrations to streamline if you're already comfortable working with assets"

The escalation levels are controlled by event filter definitions.
At level 1, you only need the built-in [`is_incident` event filter][30].
Every event will trigger remediation with the `remediation` handler.

For escalation to levels 2 and 3, you'll need the [`is_incident` event filter][30] plus an [occurrence-based event filter][32] that uses occurrence-based expressions based on the number of occurrences.

For level 2, that uses an expression like `event.check.occurrences == 5` to activate the `slack_alert_channel` handler at the fifth occurrence.

For escalation to level 3, you'll need the [`is_incident` event filter][30] again, plus a slightly different occurrence-based event filter for [repeated events][32] to activate the `pagerduty_emergency` handler at every tenth occurrence.
The event filter expression `event.check.occurrences % 10 == 0` will match event data with an occurrences value that is evenly divisible by 10 via a modulo operator calculation.

{{% notice note %}}
**NOTE**: Instead of setting up separate occurrence-based filters, use the `is_incident` event filter in conjunction with the [Sensu Go Fatigue Check Filter](https://bonsai.sensu.io/assets/nixwiz/sensu-go-fatigue-check-filter) asset for escalation.
{{% /notice %}}

With the event filters configured, you can create the three corresponding handler definitions.

Your handler for level 1 could use a restart command to attempt remediation at the first occurrence:

{{< language-toggle >}}

{{< code yml >}}
type: Handler
api_version: core/v2
metadata:
  name: remediation
  namespace: default
spec:
  command: sudo systemctl restart application
  filters:
  - is_incident
  type: pipe
{{< /code >}}

{{< code json >}}
{
  "type": "Handler",
  "api_version": "core/v2",
  "metadata": {
    "name": "remediation",
    "namespace": "default"
  },
  "spec": {
    "command": "sudo systemctl restart application",
    "filters": [
      "is_incident"
    ],
    "type": "pipe"
  }
}
{{< /code >}}

{{< /language-toggle >}}

For the level 2 handler, you can  for levels 2 and 3, you can follow [Send Slack alerts][15] describes how to configure a handler that will send your level-2 alerts to a Slack channel.

For your level-3 handler to send alerts to PagerDuty, follow [Register the Sensu PagerDuty Handler asset][33] to create your `pagerduty_emergency` handler.
The handler definition must include the `is_incident` and `filter_tenth_occurrence` event filters. 

Finally, 

{{% notice note %}}
**NOTE**: Sensu's [Ansible](../../../plugins/supported-integrations/ansible/), [Rundeck](../../../plugins/supported-integrations/rundeck/), and [Saltstack](../../../plugins/supported-integrations/saltstack/) auto-remediation integrations and the [Sensu Remediation Handler](https://bonsai.sensu.io/assets/sensu/sensu-remediation-handler) asset include built-in occurrence- and severity-based event filtering for a more streamlined approach to escalating event handling.
{{% /notice %}}

**PLACEHOLDER CONTENT**

{{< language-toggle >}}

{{< code yml >}}
type: EventFilter
api_version: core/v2
metadata:
  annotations: null
  labels: null
  name: filter_fifth_occurrence
  namespace: default
spec:
  action: allow
  expressions:
  - event.check.occurrences == 5
  runtime_assets: []
{{< /code >}}

{{< code json >}}
{
  "type": "EventFilter",
  "api_version": "core/v2",
  "metadata": {
    "name": "filter_fifth_occurrence",
    "namespace": "default",
    "labels": null,
    "annotations": null
  },
  "spec": {
    "action": "allow",
    "expressions": [
      "event.check.occurrences"
    ],
    "runtime_assets": []
  }
}
{{< /code >}}

{{< /language-toggle >}}

For escalation to level 3, you'll need the [`is_incident` event filter][31] again, and plus an event filter for [repeated events][32] to activate the `pagerduty_emergency` handler at every tenth occurrence.
This event filter will match event data with an occurrences value of 10 OR any occurrences value that is evenly divisible by 10 via a modulo operator calculation:

{{< language-toggle >}}

{{< code yml >}}
type: EventFilter
api_version: core/v2
metadata:
  annotations: null
  labels: null
  name: filter_tenth_occurrence
  namespace: default
spec:
  action: allow
  expressions:
  - event.check.occurrences == 10 || event.check.occurrences % 10 == 0
  runtime_assets: []
{{< /code >}}

{{< code json >}}
{
  "type": "EventFilter",
  "api_version": "core/v2",
  "metadata": {
    "name": "filter_tenth_occurrence",
    "namespace": "default",
    "labels": null,
    "annotations": null
  },
  "spec": {
    "action": "allow",
    "expressions": [
      "event.check.occurrences == 10 || event.check.occurrences % 10 == 0"
    ],
    "runtime_assets": []
  }
}
{{< /code >}}

{{< /language-toggle >}}

With the built-in `is_incident` event filter and the level-2 and level-3 event filters configured, you can create the three corresponding handler definitions.

Your level-1 `remediation` handler might look like this:

{{< language-toggle >}}

{{< code yml >}}
type: Handler
api_version: core/v2
metadata:
  name: remediation
  namespace: default
spec:
  command: sudo systemctl restart application
  filters:
  - is_incident
  type: pipe
{{< /code >}}

{{< code json >}}
{
  "type": "Handler",
  "api_version": "core/v2",
  "metadata": {
    "name": "remediation",
    "namespace": "default"
  },
  "spec": {
    "command": "sudo systemctl restart application",
    "filters": [
      "is_incident"
    ],
    "type": "pipe"
  }
}
{{< /code >}}

{{< /language-toggle >}}

Using the your level-2 `slack_alert_channel` handler:

{{< language-toggle >}}

{{< code yml >}}
type: Handler
api_version: core/v2
metadata:
  name: slack_alert_channel
  namespace: default
spec:
  command: sensu-slack-handler --channel '#alerts'
  env_vars:
  - SLACK_WEBHOOK_URL=https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX
  filters:
  - is_incident
  - filter_fifth_occurrence
  type: pipe
{{< /code >}}

{{< code json >}}
{
  "type": "Handler",
  "api_version": "core/v2",
  "metadata": {
    "name": "slack_alert_channel",
    "namespace": "default"
  },
  "spec": {
    "command": "sensu-slack-handler --channel '#alerts'",
    "env_vars": [
      "SLACK_WEBHOOK_URL=https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX"
    ],
    "filters": [
      "is_incident",
      "filter_fifth_occurrence"
    ],
    "type": "pipe"
  }
}
{{< /code >}}

{{< /language-toggle >}}

Include the `filter_tenth_occurrence` event filter in your level-3 handler, `pagerduty_emergency`.
This example uses the [Sensu PagerDuty Handler][] asset: 

{{< language-toggle >}}

{{< code yml >}}
type: Handler
api_version: core/v2
metadata:
  name: pagerduty_emergency
  namespace: default
spec:
  filters:
  - is_incident
  - filter_tenth_occurrence
  type: pipe

type: Handler
api_version: core/v2
metadata:
  name: pagerduty_emergency
  namespace: default
spec:
  type: pipe
  command: sensu-pagerduty-handler
  timeout: 10
  runtime_assets:
  - sensu/sensu-pagerduty-handler
  filters:
  - is_incident
  - filter_tenth_occurrence
  secrets:
  - name: PAGERDUTY_TOKEN
    secret: pagerduty_authtoken
{{< /code >}}

{{< code json >}}
{
  "type": "Handler",
  "api_version": "core/v2",
  "metadata": {
    "name": "pagerduty_emergency",
    "namespace": "default"
  },
  "spec": {
    "command": "sensu-slack-handler --channel '#monitoring'",
    "env_vars": [
      "SLACK_WEBHOOK_URL=https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX"
    ],
    "filters": [
      "is_incident",
      "filter_tenth_occurrence"
    ],
    "type": "pipe"
  }
}
{{< /code >}}

{{< /language-toggle >}}



## Keepalive event handlers

Sensu [keepalives][12] are the heartbeat mechanism used to ensure that all registered [Sensu agents][13] are operational and can reach the [Sensu backend][14].
You can connect keepalive events to your monitoring workflows using a keepalive handler.
Sensu looks for an event handler named `keepalive` and automatically uses it to process keepalive events.

Suppose you want to receive Slack notifications for keepalive alerts, and you already have a [Slack handler set up to process events][15].
To process keepalive events using the Slack pipeline, create a handler set named `keepalive` and add the `slack` handler to the `handlers` array.
The resulting `keepalive` handler set configuration will look like this example:

{{< language-toggle >}}

{{< code yml >}}
type: Handler
api_version: core/v2
metadata:
  name: keepalive
  namespace: default
spec:
  handlers:
  - slack
  type: set
{{< /code >}}

{{< code json >}}
{
  "type": "Handler",
  "api_version": "core/v2",
  "metadata": {
    "name": "keepalive",
    "namespace": "default"
  },
  "spec": {
    "type": "set",
    "handlers": [
      "slack"
    ]
  }
}
{{< /code >}}

{{< /language-toggle >}}

You can also use the [`keepalive-handlers`][19] flag to send keepalive events to any handler you have configured.
If you do not specify a keepalive handler with the `keepalive-handlers` flag, the Sensu backend will use the default `keepalive` handler and create an event in sensuctl and the Sensu web UI.

## Handler specification

### Top-level attributes

type         | 
-------------|------
description  | Top-level attribute that specifies the [`sensuctl create`][4] resource type. Handlers should always be type `Handler`.
required     | Required for handler definitions in `wrapped-json` or `yaml` format for use with [`sensuctl create`][4].
type         | String
example      | {{< code shell >}}"type": "Handler"{{< /code >}}

api_version  | 
-------------|------
description  | Top-level attribute that specifies the Sensu API group and version. For handlers in this version of Sensu, the `api_version` should always be `core/v2`.
required     | Required for handler definitions in `wrapped-json` or `yaml` format for use with [`sensuctl create`][4].
type         | String
example      | {{< code shell >}}"api_version": "core/v2"{{< /code >}}

metadata     | 
-------------|------
description  | Top-level collection of metadata about the handler that includes `name`, `namespace`, and `created_by` as well as custom `labels` and `annotations`. The `metadata` map is always at the top level of the handler definition. This means that in `wrapped-json` and `yaml` formats, the `metadata` scope occurs outside the `spec` scope. See [metadata attributes][8] for details.
required     | Required for handler definitions in `wrapped-json` or `yaml` format for use with [`sensuctl create`][4].
type         | Map of key-value pairs
example      | {{< code shell >}}
"metadata": {
  "name": "handler-slack",
  "namespace": "default",
  "created_by": "admin",
  "labels": {
    "region": "us-west-1"
  },
  "annotations": {
    "slack-channel": "#monitoring"
  }
}
{{< /code >}}

spec         | 
-------------|------
description  | Top-level map that includes the handler [spec attributes][5].
required     | Required for handler definitions in `wrapped-json` or `yaml` format for use with [`sensuctl create`][4].
type         | Map of key-value pairs
example      | {{< code shell >}}
"spec": {
  "type": "tcp",
  "socket": {
    "host": "10.0.1.99",
    "port": 4444
  },
  "metadata": {
    "name": "tcp_handler",
    "namespace": "default"
  }
}
{{< /code >}}

### Metadata attributes

| name       |      |
-------------|------
description  | Unique string used to identify the handler. Handler names cannot contain special characters or spaces (validated with Go regex [`\A[\w\.\-]+\z`][18]). Each handler must have a unique name within its namespace.
required     | true
type         | String
example      | {{< code shell >}}"name": "handler-slack"{{< /code >}}

| namespace  |      |
-------------|------
description  | Sensu [RBAC namespace][9] that the handler belongs to.
required     | false
type         | String
default      | `default`
example      | {{< code shell >}}"namespace": "production"{{< /code >}}

| created_by |      |
-------------|------
description  | Username of the Sensu user who created the handler or last updated the handler. Sensu automatically populates the `created_by` field when the handler is created or updated.
required     | false
type         | String
example      | {{< code shell >}}"created_by": "admin"{{< /code >}}

| labels     |      |
-------------|------
description  | Custom attributes to include with observation data in events that you can use for response and web UI view filtering.<br><br>If you include labels in your event data, you can filter [API responses][10], [sensuctl responses][11], and [web UI views][25] based on them. In other words, labels allow you to create meaningful groupings for your data.<br><br>Limit labels to metadata you need to use for response filtering. For complex, non-identifying metadata that you will *not* need to use in response filtering, use annotations rather than labels.
required     | false
type         | Map of key-value pairs. Keys can contain only letters, numbers, and underscores and must start with a letter. Values can be any valid UTF-8 string.
default      | `null`
example      | {{< code shell >}}"labels": {
  "environment": "development",
  "region": "us-west-2"
}{{< /code >}}

| annotations |     |
-------------|------
description  | Non-identifying metadata to include with observation data in events that you can access with [event filters][24]. You can use annotations to add data that's meaningful to people or external tools that interact with Sensu.<br><br>In contrast to labels, you cannot use annotations in [API response filtering][10], [sensuctl response filtering][11], or [web UI views][28].
required     | false
type         | Map of key-value pairs. Keys and values can be any valid UTF-8 string.
default      | `null`
example      | {{< code shell >}} "annotations": {
  "managed-by": "ops",
  "playbook": "www.example.url"
}{{< /code >}}

### Spec attributes

type         | 
-------------|------
description  | Handler type.
required     | true
type         | String
allowed values | `pipe`, `tcp`, `udp` & `set`
example      | {{< code shell >}}"type": "pipe"{{< /code >}}

filters      | 
-------------|------
description  | Array of Sensu event filters (by names) to use when filtering events for the handler. Each array item must be a string.
required     | false
type         | Array
example      | {{< code shell >}}"filters": ["occurrences", "production"]{{< /code >}}

mutator      | 
-------------|------
description  | Name of the Sensu event mutator to use to mutate event data for the handler.
required     | false
type         | String
example      | {{< code shell >}}"mutator": "only_check_output"{{< /code >}}

timeout     | 
------------|------
description | Handler execution duration timeout (hard stop). In seconds. Only used by `pipe`, `tcp`, and `udp` handler types.
required    | false
type        | Integer
default     | `60` (for `tcp` and `udp` handlers)
example     | {{< code shell >}}"timeout": 30{{< /code >}}

command      | 
-------------|------
description  | Handler command to be executed. The event data is passed to the process via `STDIN`. {{% notice note %}}
**NOTE**: The `command` attribute is only supported for pipe handlers (i.e. handlers configured with `"type": "pipe"`).
{{% /notice %}}
required     | true (if `type` equals `pipe`)
type         | String
example      | {{< code shell >}}"command": "/etc/sensu/plugins/pagerduty.go"{{< /code >}}

env_vars      | 
-------------|------
description  | Array of environment variables to use with command execution. {{% notice note %}}
**NOTE**: The `env_vars` attribute is only supported for pipe handlers (i.e. handlers configured with `"type": "pipe"`).
{{% /notice %}}
required     | false
type         | Array
example      | {{< code shell >}}"env_vars": ["API_KEY=0428d6b8nb51an4d95nbe28nf90865a66af5"]{{< /code >}}

socket       | 
-------------|------
description  | Scope for [`socket` definition][6] used to configure the TCP/UDP handler socket. {{% notice note %}}
**NOTE**: The `socket` attribute is only supported for TCP/UDP handlers (i.e. handlers configured with `"type": "tcp"` or `"type": "udp"`).
{{% /notice %}}
required     | true (if `type` equals `tcp` or `udp`)
type         | Hash
example      | {{< code shell >}}"socket": {}{{< /code >}}

handlers     | 
-------------|------
description  | Array of Sensu event handlers (by their names) to use for events using the handler set. Each array item must be a string. {{% notice note %}}
**NOTE**: The `handlers` attribute is only supported for handler sets (i.e. handlers configured with `"type": "set"`).
{{% /notice %}}
required     | true (if `type` equals `set`)
type         | Array
example      | {{< code shell >}}"handlers": ["pagerduty", "email", "ec2"]{{< /code >}}

runtime_assets | 
---------------|------
description    | Array of [Sensu dynamic runtime assets][7] (by names) required at runtime to execute the `command`
required       | false
type           | Array
example        | {{< code shell >}}"runtime_assets": ["ruby-2.5.0"]{{< /code >}}

secrets        | 
---------------|------
description    | Array of the name/secret pairs to use with command execution.
required       | false
type           | Array
example        | {{< code shell >}}"secrets": [
  {
    "name": "ANSIBLE_HOST",
    "secret": "sensu-ansible-host"
  },
  {
    "name": "ANSIBLE_TOKEN",
    "secret": "sensu-ansible-token"
  }
]{{< /code >}}

#### `socket` attributes

host         | 
-------------|------
description  | Socket host address (IP or hostname) to connect to.
required     | true
type         | String
example      | {{< code shell >}}"host": "8.8.8.8"{{< /code >}}

port         | 
-------------|------
description  | Socket port to connect to.
required     | true
type         | Integer
example      | {{< code shell >}}"port": 4242{{< /code >}}

#### `secrets` attributes

name         | 
-------------|------
description  | Name of the [secret][20] defined in the executable command. Becomes the environment variable presented to the check. See [Use secrets management in Sensu][26] for more information.
required     | true
type         | String
example      | {{< code shell >}}"name": "ANSIBLE_HOST"{{< /code >}}

secret       | 
-------------|------
description  | Name of the Sensu secret resource that defines how to retrieve the [secret][20].
required     | true
type         | String
example      | {{< code shell >}}"secret": "sensu-ansible-host"{{< /code >}}

## Handler examples

### Minimum required pipe handler attributes

{{< language-toggle >}}

{{< code yml >}}
type: Handler
api_version: core/v2
metadata:
  name: pipe_handler_minimum
  namespace: default
spec:
  command: command-example
  type: pipe
{{< /code >}}

{{< code json >}}
{
  "type": "Handler",
  "api_version": "core/v2",
  "metadata": {
    "name": "pipe_handler_minimum",
    "namespace": "default"
  },
  "spec": {
    "command": "command-example",
    "type": "pipe"
  }
}
{{< /code >}}

{{< /language-toggle >}}

### Minimum required TCP/UDP handler attributes

This example demonstrates a `tcp` type handler.
Change the type from `tcp` to `udp` to create the minimum configuration for a `udp` type handler. 

{{< language-toggle >}}

{{< code yml >}}
type: Handler
api_version: core/v2
metadata:
  name: tcp_udp_handler_minimum
  namespace: default
spec:
  socket:
    host: 10.0.1.99
    port: 4444
  type: tcp
{{< /code >}}

{{< code json >}}
{
  "type": "Handler",
  "api_version": "core/v2",
  "metadata": {
    "name": "tcp_udp_handler_minimum",
    "namespace": "default"
  },
  "spec": {
    "type": "tcp",
    "socket": {
      "host": "10.0.1.99",
      "port": 4444
    }
  }
}
{{< /code >}}

{{< /language-toggle >}}

### Send Slack alerts

This handler will send alerts to a channel named `monitoring` with the configured webhook URL, using the `handler-slack` executable command.

{{< language-toggle >}}

{{< code yml >}}
type: Handler
api_version: core/v2
metadata:
  name: slack
  namespace: default
spec:
  command: sensu-slack-handler --channel '#monitoring'
  env_vars:
  - SLACK_WEBHOOK_URL=https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX
  filters:
  - is_incident
  - not_silenced
  handlers: []
  runtime_assets: []
  timeout: 0
  type: pipe
{{< /code >}}

{{< code json >}}
{
  "type": "Handler",
  "api_version": "core/v2",
  "metadata": {
    "name": "slack",
    "namespace": "default"
  },
  "spec": {
    "command": "sensu-slack-handler --channel '#monitoring'",
    "env_vars": [
      "SLACK_WEBHOOK_URL=https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX"
    ],
    "filters": [
      "is_incident",
      "not_silenced"
    ],
    "handlers": [],
    "runtime_assets": [],
    "timeout": 0,
    "type": "pipe"
  }
}
{{< /code >}}

{{< /language-toggle >}}

### Send event data to a TCP socket

This handler will send event data to a TCP socket (10.0.1.99:4444) and timeout if an acknowledgement (`ACK`) is not received within 30 seconds.

{{< language-toggle >}}

{{< code yml >}}
type: Handler
api_version: core/v2
metadata:
  name: tcp_handler
  namespace: default
spec:
  socket:
    host: 10.0.1.99
    port: 4444
  type: tcp
{{< /code >}}

{{< code json >}}
{
  "type": "Handler",
  "api_version": "core/v2",
  "metadata": {
    "name": "tcp_handler",
    "namespace": "default"
  },
  "spec": {
    "type": "tcp",
    "socket": {
      "host": "10.0.1.99",
      "port": 4444
    }
  }
}
{{< /code >}}

{{< /language-toggle >}}

### Send event data to a UDP socket

This handler will forward event data to a UDP socket (10.0.1.99:4444) and timeout if an acknowledgement (`ACK`) is not received within 30 seconds.

{{< language-toggle >}}

{{< code yml >}}
type: Handler
api_version: core/v2
metadata:
  name: udp_handler
  namespace: default
spec:
  socket:
    host: 10.0.1.99
    port: 4444
  type: udp
{{< /code >}}

{{< code json >}}
{
  "type": "Handler",
  "api_version": "core/v2",
  "metadata": {
    "name": "udp_handler",
    "namespace": "default"
  },
  "spec": {
    "type": "udp",
    "socket": {
      "host": "10.0.1.99",
      "port": 4444
    }
  }
}
{{< /code >}}

{{< /language-toggle >}}

### Send registration events

If you configure a Sensu event handler named `registration`, the Sensu backend will create and process an event for the agent registration, apply any configured filters and mutators, and execute the registration handler.

You can use registration events to execute one-time handlers for new Sensu agents to update an external configuration management database (CMDB).
This example demonstrates how to configure a registration event handler to create or update a ServiceNow incident or event with the [Sensu Go ServiceNow Handler][17]:

{{< language-toggle >}}

{{< code yml >}}
type: Handler
api_version: core/v2
metadata:
  name: registration
  namespace: default
spec:
  handlers:
  - servicenow-cmdb
  type: set
{{< /code >}}

{{< code json >}}
{
  "type": "Handler",
  "api_version": "core/v2",
  "metadata": {
    "name": "registration",
    "namespace": "default"
  },
  "spec": {
    "handlers": [
      "servicenow-cmdb"
    ],
    "type": "set"
  }
}
{{< /code >}}

{{< /language-toggle >}}

The [agent reference][27] describes agent registration and registration events in more detail.

### Execute multiple handlers (handler set)

The following example creates a handler set, `notify_all_the_things`, that will execute three handlers: `slack`, `tcp_handler`, and `udp_handler`.

{{< language-toggle >}}

{{< code yml >}}
type: Handler
api_version: core/v2
metadata:
  name: notify_all_the_things
  namespace: default
spec:
  handlers:
  - slack
  - tcp_handler
  - udp_handler
  type: set
{{< /code >}}

{{< code json >}}
{
  "type": "Handler",
  "api_version": "core/v2",
  "metadata": {
    "name": "notify_all_the_things",
    "namespace": "default"
  },
  "spec": {
    "type": "set",
    "handlers": [
      "slack",
      "tcp_handler",
      "udp_handler"
    ]
  }
}
{{< /code >}}

{{< /language-toggle >}}

### Handler with secret

Learn more about [secrets management][26] for your Sensu configuration in the [secrets][20] and [secrets providers][21] references.

{{< language-toggle >}}

{{< code yml >}}
---
type: Handler 
api_version: core/v2 
metadata:
  name: ansible-tower
  namespace: ops
spec: 
  type: pipe
  command: sensu-ansible-handler -h $ANSIBLE_HOST -t $ANSIBLE_TOKEN
  secrets:
  - name: ANSIBLE_HOST
    secret: sensu-ansible-host
  - name: ANSIBLE_TOKEN
    secret: sensu-ansible-token
{{< /code >}}

{{< code json >}}
{
  "type": "Handler",
  "api_version": "core/v2",
  "metadata": {
    "name": "ansible-tower",
    "namespace": "ops"
  },
  "spec": {
    "type": "pipe",
    "command": "sensu-ansible-handler -h $ANSIBLE_HOST -t $ANSIBLE_TOKEN",
    "secrets": [
      {
        "name": "ANSIBLE_HOST",
        "secret": "sensu-ansible-host"
      },
      {
        "name": "ANSIBLE_TOKEN",
        "secret": "sensu-ansible-token"
      }
    ]
  }
}
{{< /code >}}

{{< /language-toggle >}}

[1]: ../../observe-schedule/checks/
[2]: https://en.wikipedia.org/wiki/Standard_streams
[3]: ../../observe-events/events/
[4]: ../../../sensuctl/create-manage-resources/#create-resources
[5]: #spec-attributes
[6]: #socket-attributes
[7]: ../../../operations/deploy-sensu/assets/
[8]: #metadata-attributes
[9]: ../../../operations/control-access/rbac#namespaces
[10]: ../../../api#response-filtering
[11]: ../../../sensuctl/filter-responses/
[12]: ../../observe-schedule/agent#keepalive-monitoring
[13]: ../../observe-schedule/agent/
[14]: ../../observe-schedule/backend/
[15]: ../send-slack-alerts/
[16]: https://bonsai.sensu.io/
[17]: https://github.com/sensu/sensu-servicenow-handler
[18]: https://regex101.com/r/zo9mQU/2
[19]: ../../observe-schedule/agent/#keepalive-handlers-flag
[20]: ../../../operations/manage-secrets/secrets/
[21]: ../../../operations/manage-secrets/secrets-providers/
[22]: ../
[23]: ../../../operations/deploy-sensu/use-assets-to-install-plugins
[24]: ../../observe-filter/filters/
[25]: ../../../web-ui/search#search-for-labels
[26]: ../../../operations/manage-secrets/secrets-management/
[27]: ../../observe-schedule/agent/#registration-endpoint-management-and-service-discovery
[28]: ../../../web-ui/search/
[29]: ../../../observability-pipeline/
[30]: ../../observe-filter/filters/#built-in-filter-is_incident
[32]: ../../observe-filter/filters/#handle-repeated-events
[33]: ../../../plugins/use-assets-to-install-plugins/#register-the-sensu-pagerduty-handler-asset
